Added support for downloading task dependencies
Upload CKI logs at end of run.

Change-Id: Ibfe2d80b84b775962f75dd0bd2bc357903126945

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -4,8 +4,8 @@ dependency:
   enabled: false
 driver:
   name: docker
-lint:
-  name: yamllint
+lint: |
+  yamllint tasks
 platforms:
   - name: el7
     image: centos:latest
@@ -25,7 +25,6 @@ scenario:
     - lint
     - destroy
     - dependency
-    - syntax
     - create
     - prepare
     - destroy
