Fix quoted line which is wrapped
Change-Id: I7571bd13a53b46a1d1de28f0dcb5ebcf28f680a4

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -69,7 +69,7 @@
 # Run the test
 - name: Execute restraint processed_cki_job.xml  # noqa 301
   delegate_to: localhost
-  command: |
+  command:
     restraint --job {{ rstrnt_job.path }}/processed_cki_job.xml --host
               1=root@{{ fqdn }} -v -e 'ssh -o UserKnownHostsFile=/dev/null
               -o StrictHostKeyChecking=no'
