Update to handle rhel agent changes
This update fixes how this role works with the latest dci-rhel-agent.
fqdn is no longer correct, since this role is assigned to the systems
under test the correct variable to use is inventory_hostname.

Change-Id: Ic5e6763eeda7a2306f066ccca4afa94af9afee37

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 ---
 galaxy_info:
-  author: Distributed-CI Team
+  role_name: dci.cki
+  author: Red Hat DCI
   description: An Ansible role to run the Red Hat RHEL cki test suite
   company: Red Hat
   license: license (Apache)
